--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
+    "sinon": "^10.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
